--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @import 'tailwindcss';
+@import url(https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,regular,500,600,700,100italic,200italic,300italic,italic,500italic,600italic,700italic);
+
+@theme {
+  --font-mono: 'Roboto Mono', monospace;
+  --color-White-bg: rgba(0, 0, 0, 0.01);
+  --font-bdy: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Roboto,
+    Helvetica Neue;
+}
