--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
   --font-bdy: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Roboto,
     Helvetica Neue;
+  --color-blue-bg: #3f51b5;
+  --shadow-header: 0 2px 6px 0 rgba(34, 36, 38, 0.15),
+    0 2px 18px 0 rgba(34, 36, 38, 0.17);
 }
 
 .dropdown::-webkit-scrollbar {
