--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,18 @@
   --shadow-header: 0 2px 6px 0 rgba(34, 36, 38, 0.15),
     0 2px 18px 0 rgba(34, 36, 38, 0.17);
 }
+.nav-item {
+  @apply flex flex-col justify-center text-center py-3 px-4 border-b border-gray-300 gap-1 cursor-pointer text-sm hover:bg-gray-50 transition-colors duration-300 ease-initial;
+}
+
+.nav-item.active {
+  @apply bg-gray-100 text-blue-700 border-gray-200;
+  box-shadow: inset 0 1px 4px 0 rgba(34, 36, 38, 0.12);
+}
+
+.nav-item-icon {
+  @apply text-2xl text-center m-auto;
+}
 
 .dropdown::-webkit-scrollbar {
   width: 0.785rem;
