--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   --shadow-header: 0 2px 6px 0 rgba(34, 36, 38, 0.15),
     0 2px 18px 0 rgba(34, 36, 38, 0.17);
 }
+
+body {
+  color: rgba(0, 0, 0, 0.87);
+}
 .nav-item {
   @apply flex flex-col justify-center text-center py-3 px-4 border-b border-gray-300 gap-1 cursor-pointer text-sm hover:bg-gray-50 transition-colors duration-300 ease-initial;
 }
@@ -70,4 +74,8 @@
   -webkit-transition: opacity 0.1s ease;
   transition: opacity 0.1s ease;
   will-change: transform, opacity;
+}
+
+.tag {
+  box-shadow: inset 0 0 0 1px rgba(34, 36, 38, 0.15);
 }
