--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,14 @@ body {
 .tag {
   box-shadow: inset 0 0 0 1px rgba(34, 36, 38, 0.15);
 }
+
+.td-ui {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 0.7857rem;
+  padding-right: 1.25rem;
+  transition: background 0.1s ease, color 0.1s ease;
+  display: table-cell;
+  vertical-align: inherit;
+  unicode-bidi: isolate;
+}
