--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 @import 'tailwindcss';
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,regular,500,600,700,100italic,200italic,300italic,italic,500italic,600italic,700italic);
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
 
 @theme {
   --font-mono: 'Roboto Mono', monospace;
   --font-roboto: 'Roboto', sans-serif;
+  --font-lato: 'Lato', Helvetica Neue, Arial, Helvetica, sans-serif;
   --color-White-bg: rgba(0, 0, 0, 0.01);
   --font-bdy: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Roboto,
