--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 @theme {
   --font-mono: 'Roboto Mono', monospace;
-  --font-roboto: 'Roboto', sans-serif;
+  --font-roboto: 'Roboto', Helvetica Neue, Helvetica, Arial, sans-serif;
   --font-lato: 'Lato', Helvetica Neue, Arial, Helvetica, sans-serif;
   --color-White-bg: rgba(0, 0, 0, 0.01);
   --font-bdy: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
