--- a/src/index.css
+++ b/src/index.css
@@ -151,3 +151,26 @@ input[type='radio']:checked + .radioLabel::after {
 .radioLabel:hover::before {
   border-color: #0056b3;
 }
+
+.confirm-delete-con::before {
+  bottom: -0.30714286rem;
+  left: 0.74rem;
+  top: auto;
+  right: auto;
+  margin-left: 0;
+  background: #fff;
+  position: absolute;
+  content: '';
+  width: 0.71428571em;
+  height: 0.71428571em;
+  background: #fff;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  z-index: 2;
+  box-shadow: 1px 1px 0 0 #bababc;
+}
+
+.confirm-delete {
+  box-shadow: 0 2px 4px 0 rgba(34, 36, 38, 0.12),
+    0 2px 10px 0 rgba(34, 36, 38, 0.15);
+}
