--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --font-mono: 'Roboto Mono', monospace;
   --font-roboto: 'Roboto', Helvetica Neue, Helvetica, Arial, sans-serif;
   --font-lato: 'Lato', Helvetica Neue, Arial, Helvetica, sans-serif;
-  --color-White-bg: rgba(0, 0, 0, 0.04);
+  --color-White-bg: rgba(0, 0, 0, 0.05);
   --font-bdy: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Roboto,
     Helvetica Neue;
@@ -15,6 +15,7 @@
   --shadow-header: 0 2px 6px 0 rgba(34, 36, 38, 0.15),
     0 2px 18px 0 rgba(34, 36, 38, 0.17);
   --breakpoint-md: 43.75rem;
+  --breakpoint-xl: 74.625rem;
 }
 
 body {
